# school-matz

./: .dockerignore  .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  1cat  CHANGELOG.md  DOCKER_DEPLOYMENT.md  Dockerfile  MEJORAS.md  MEJORAS.ms  MULTI_TENANT.md  README.md  README_DEV.md  SCHOOL_ASSET_MGMT.md  START_STOP_STACK.md  USER_ID_CARDS.md  cliff.toml  docker-compose.infra.local.yml  docker-compose.infra.yml  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml  release.sh  start.sh
backend/: auth.py  config.py  database.py  main.py
backend/models/: __init__.py  admin_user.py  categoria.py  material.py  movimiento.py  usuario.py
backend/routers/: auth.py  categorias.py  material.py  movimientos.py  usuarios.py
backend/schemas/: categoria.py  material.py  movimiento.py  usuario.py
backend/services/: movimiento_service.py  pdf_carnet_service.py  pdf_service.py  qr_service.py
docker/: nginx.conf  nginx.conf.template  setup.sh  tenant-compose.local.yml.j2  tenant-compose.yml.j2
docs/: tailscale.md
frontend/: admin.html  index.html
frontend/css/: custom.css
frontend/js/: api.js
meta-admin/: .env.example  Dockerfile  pyproject.toml
meta-admin/backend/: __init__.py  auth.py  config.py  database.py  main.py  models.py
meta-admin/backend/routers/: __init__.py  auth.py  stats.py  tenants.py
meta-admin/frontend/: dashboard.html  index.html  login.html  tenant.html
meta-admin/frontend/js/: api.js
meta-admin/services/: __init__.py  docker_service.py  tenant_stats.py
nginx/: standalone.conf
scripts/: avahi-watcher.sh  build-app-image.sh  create_superadmin.py  first_run.sh  gen-certs-standalone.sh  gen_cert.sh  init-infra.sh  nginx-materiales.conf  prepare_root.sh  school-assets.service  setup-dnsmasq-local.sh  setup_avahi.sh  setup_mkcert.sh  setup_nginx.sh
traefik/: traefik.yml.example
