[project]
name = "school-assets"
version = "0.1.0"
description = "Sistema de gestión de material escolar"
authors = [
    {name = "Iosu"}
]
requires-python = "^3.10"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "reportlab (>=4.4.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
