[project]
name = "school-assets"
version = "0.5.0"
description = "Sistema de gestión de material escolar"
authors = [
    {name = "Iosu"}
]
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "qrcode[pil] (>=8.2,<9.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15"
pre-commit = ">=4.5"
gitlint = ">=0.19"
git-cliff = ">=2.12"
pip-audit = ">=2.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (variables no usadas, imports no usados…)
    "I",   # isort (orden de imports)
    "UP",  # pyupgrade (modernizar sintaxis)
    "B",   # flake8-bugbear (errores comunes)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — gestionado por line-length
    "B008",  # function-call-in-default-argument — patrón normal en FastAPI (Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
